Fix z-index to prevent alert overlap.

--- a/Fuyuki.Client/src/components/Peekaboo/Peekaboo.scss
+++ b/Fuyuki.Client/src/components/Peekaboo/Peekaboo.scss
@@ -4,7 +4,7 @@
   &--fixed {
     position: fixed;
     overflow: hidden;
-    z-index: 1000;
+    z-index: 500;
     left: 0;
     width: calc(100% - 10px);
     padding: 5px;
